added edited html file

--- a/exer2.html
+++ b/exer2.html
@@ -177,11 +177,11 @@
 
   <div class="photos-container"> <!-- Images of Projects Made and Description -->
     <div class="photo">
-      <img src="proj2.png"> 
+      <img src="proj2.PNG"> 
       <p>CMSC 12 Project: Maze Runner using Python</p>
     </div>
     <div class="photo">
-      <img src="proj1.png">
+      <img src="proj1.PNG">
       <p>CMSC 150 Project: Generic Solvers using R</p>
     </div>
     <div class="photo">
